# Non-stationary-climate-extremes

./: .gitignore  Licence.md  README.md  pyproject.toml
src/: gev_estimator.py  nhgr_estimator.py
src/data/: CS_annual_max.parquet
src/examples/: GEV_Fitting_example.ipynb
